--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1337,6 +1337,10 @@ video {
   .sm\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
+
+  .sm\:text-center {
+    text-align: center;
+  }
 }
 
 @media (min-width: 768px) {
@@ -1415,6 +1419,11 @@ video {
   .md\:text-base {
     font-size: 1rem;
     line-height: 1.5rem;
+  }
+
+  .md\:text-SoftGray {
+    --tw-text-opacity: 1;
+    color: rgb(135 135 135 / var(--tw-text-opacity));
   }
 }
 
