--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1195,6 +1195,10 @@ video {
   height: 100vh;
 }
 
+.h-1\/2 {
+  height: 50%;
+}
+
 .w-1\/3 {
   width: 33.333333%;
 }
@@ -1258,6 +1262,30 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-\[500px\] {
+  width: 500px;
+}
+
+.w-\[\] {
+  width: ;
+}
+
+.w-1\/2 {
+  width: 50%;
+}
+
+.w-3\/4 {
+  width: 75%;
+}
+
+.w-screen {
+  width: 100vw;
+}
+
+.w-\[400px\] {
+  width: 400px;
 }
 
 .max-w-6xl {
@@ -2032,6 +2060,14 @@ video {
     width: 33.333333%;
   }
 
+  .lg\:w-\[\] {
+    width: ;
+  }
+
+  .lg\:w-\[80\%\] {
+    width: 80%;
+  }
+
   .lg\:max-w-lg {
     max-width: 32rem;
   }
@@ -2042,6 +2078,14 @@ video {
 
   .lg\:items-baseline {
     align-items: baseline;
+  }
+
+  .lg\:justify-start {
+    justify-content: flex-start;
+  }
+
+  .lg\:justify-end {
+    justify-content: flex-end;
   }
 
   .lg\:px-12 {
