--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1146,10 +1146,6 @@ video {
   height: 1.25rem;
 }
 
-.h-60 {
-  height: 15rem;
-}
-
 .h-64 {
   height: 16rem;
 }
@@ -1193,10 +1189,6 @@ video {
 
 .h-screen {
   height: 100vh;
-}
-
-.h-1\/2 {
-  height: 50%;
 }
 
 .w-1\/3 {
@@ -1247,12 +1239,12 @@ video {
   width: 150px;
 }
 
-.w-\[60\%\] {
-  width: 60%;
+.w-\[400px\] {
+  width: 400px;
 }
 
-.w-\[80\%\] {
-  width: 80%;
+.w-\[60\%\] {
+  width: 60%;
 }
 
 .w-fit {
@@ -1262,30 +1254,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.w-\[500px\] {
-  width: 500px;
-}
-
-.w-\[\] {
-  width: ;
-}
-
-.w-1\/2 {
-  width: 50%;
-}
-
-.w-3\/4 {
-  width: 75%;
-}
-
-.w-screen {
-  width: 100vw;
-}
-
-.w-\[400px\] {
-  width: 400px;
 }
 
 .max-w-6xl {
@@ -1761,6 +1729,11 @@ video {
   color: rgb(170 97 34 / var(--tw-text-opacity));
 }
 
+.text-dark {
+  --tw-text-opacity: 1;
+  color: rgb(35 32 32 / var(--tw-text-opacity));
+}
+
 .text-gray-400 {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
@@ -1990,10 +1963,6 @@ video {
     flex-direction: row;
   }
 
-  .md\:items-start {
-    align-items: flex-start;
-  }
-
   .md\:justify-around {
     justify-content: space-around;
   }
@@ -2060,10 +2029,6 @@ video {
     width: 33.333333%;
   }
 
-  .lg\:w-\[\] {
-    width: ;
-  }
-
   .lg\:w-\[80\%\] {
     width: 80%;
   }
@@ -2082,10 +2047,6 @@ video {
 
   .lg\:justify-start {
     justify-content: flex-start;
-  }
-
-  .lg\:justify-end {
-    justify-content: flex-end;
   }
 
   .lg\:px-12 {
