--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1106,6 +1106,14 @@ video {
   margin-top: -50px;
 }
 
+.mt-\[-150px\] {
+  margin-top: -150px;
+}
+
+.mt-\[-100px\] {
+  margin-top: -100px;
+}
+
 .block {
   display: block;
 }
